--- a/NewsSite.UI/appsettings.Development.json
+++ b/NewsSite.UI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:newssitedb.database.windows.net,1433;Initial Catalog=NewsSiteDb;Persist Security Info=False;User ID=newssite_admin;Password=Sherlock65070302004;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=NewsSiteDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 
 }
